--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -9,7 +9,7 @@
       width: 100%;
       max-width: 1200px; /* Ajuste conforme necessário */
       margin: 0 auto;
-      /*background-image: url('/mnt/data/mmmy3zyj9m691.png'); /* Substitua pelo caminho da sua imagem de mapa */
+      background-image: url('/mnt/data/mmmy3zyj9m691.png'); /* Substitua pelo caminho da sua imagem de mapa */
       background-size: cover;
       height: 0;
       padding-bottom: 50%; /* Mantém a proporção da imagem do mapa */
@@ -95,9 +95,9 @@
       function addClickEvent(container, coordinatesElement) {
         container.addEventListener("click", function(event) {
           var rect = container.getBoundingClientRect();
-          var x = ((event.clientX - rect.left) / rect.width) ;
-          var y = ((event.clientY - rect.top) / rect.height) ;
-          coordinatesElement.textContent = "Posição clicada: (" + x.toFixed(2) + "%, " + y.toFixed(2) + "%)";
+          var x = event.clientX - rect.left;
+          var y = event.clientY - rect.top;
+          coordinatesElement.textContent = "Posição clicada: (" + x + "px, " + y + "px)";
         });
       }
 
