--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -18,7 +18,7 @@
     .svg-icon {
       position: absolute;
       width: 3%; /* Ajuste conforme necessário */
-      height: auto;
+      height: 1000;
       cursor: pointer;
     }
     #coordinates {
