--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -84,6 +84,7 @@
               svgWrapper.classList.add("svg-icon");
               svgWrapper.style.left = item.x + "%";
               svgWrapper.style.top = item.y + "%";
+              svgWrapper.style.width = item.width + "%";
               svgWrapper.innerHTML = svgContent;
               container.appendChild(svgWrapper);
             })
