--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -37,43 +37,12 @@
   <script>
     document.addEventListener("DOMContentLoaded", function() {
       var svgData = [
-      { url: "/IMAGE/Alaska.svg", x: 6.5, y: 11 },
+        { url: "/IMAGE/Alaska.svg", x: 6.5, y: 11 },
         { url: "/IMAGE/Alemanha.svg", x: 45, y: 34 },
-        { url: "/IMAGE/AmericaCentral.svg", x: 22, y: 62 },
-        { url: "/IMAGE/Aral.svg", x: 64, y: 30 },
-        { url: "/IMAGE/Argelia.svg", x: 46, y: 60 },
-        { url: "/IMAGE/Argentina.svg", x: 30, y: 88 },
-        { url: "/IMAGE/AustraliaNorte.svg", x: 82, y: 92 },
-        { url: "/IMAGE/AustraliaSul.svg", x: 82, y: 98 },
-        { url: "/IMAGE/Borneo.svg", x: 74, y: 75 },
+        // Adicione os países com as coordenadas correspondentes
         { url: "/IMAGE/Brasil.svg", x: 33, y: 77 },
-        { url: "/IMAGE/California.svg", x: 14, y: 45 },
-        { url: "/IMAGE/Congo.svg", x: 51, y: 73 },
-        { url: "/IMAGE/Dudinka.svg", x: 63, y: 18 },
-        { url: "/IMAGE/Egito.svg", x: 46, y: 65 },
-        { url: "/IMAGE/Franca.svg", x: 45, y: 40 },
-        { url: "/IMAGE/Groelandia.svg", x: 41, y: 12 },
-        { url: "/IMAGE/India.svg", x: 64, y: 63 },
-        { url: "/IMAGE/Inglaterra.svg", x: 43, y: 32 },
-        { url: "/IMAGE/Islandia.svg", x: 41, y: 25 },
-        { url: "/IMAGE/Japao.svg", x: 82, y: 36 },
-        { url: "/IMAGE/Labrador.svg", x: 31, y: 16 },
-        { url: "/IMAGE/Mackenzie.svg", x: 18, y: 14 },
-        { url: "/IMAGE/Mexico.svg", x: 14, y: 53 },
-        { url: "/IMAGE/Moscou.svg", x: 54, y: 29 },
-        { url: "/IMAGE/NovaGuine.svg", x: 78, y: 80 },
-        { url: "/IMAGE/NovaYork.svg", x: 24, y: 25 },
-        { url: "/IMAGE/OrienteMedio.svg", x: 58, y: 53 },
-        { url: "/IMAGE/Ottawa.svg", x: 25, y: 20 },
-        { url: "/IMAGE/Peru.svg", x: 25, y: 67 },
-        { url: "/IMAGE/Polonia.svg", x: 54, y: 35 },
-        { url: "/IMAGE/Siberia.svg", x: 70, y: 22 },
-        { url: "/IMAGE/Sudao.svg", x: 52, y: 70 },
-        { url: "/IMAGE/Suecia.svg", x: 45, y: 28 },
-        { url: "/IMAGE/Sumatra.svg", x: 69, y: 78 },
-        { url: "/IMAGE/Vanculver.svg", x: 8, y: 13 },
-        { url: "/IMAGE/Venezuela.svg", x: 24, y: 53 },
-        { url: "/IMAGE/Vladvostok.svg", x: 78, y: 23 }
+        { url: "/IMAGE/Argentina.svg", x: 30, y: 88 },
+        // Adicione os outros países conforme necessário
       ];
 
       // Função para carregar e adicionar SVGs ao DOM
@@ -86,12 +55,6 @@
               svgWrapper.classList.add("svg-icon");
               svgWrapper.style.left = item.x + "%";
               svgWrapper.style.top = item.y + "%";
-              
-              // Calcular o tamanho do SVG em relação à largura da tela
-              var screenWidth = window.innerWidth;
-              var svgWidth = screenWidth * (item.width / 100);
-              svgWrapper.style.width = svgWidth + "px";
-              
               svgWrapper.innerHTML = svgContent;
               container.appendChild(svgWrapper);
             })
