--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -40,7 +40,7 @@
         { url: "/IMAGE/Alaska.svg", x: 6.5, y: 11 },
         { url: "/IMAGE/Alemanha.svg", x: 45, y: 34 },
         // Adicione os países com as coordenadas correspondentes
-        { url: "/IMAGE/Brasil.svg", x: 33, y: 77 },
+        { url: "/IMAGE/Brasil.svg", x: 30, y: 88, min_width: 40, max_width: 100 },
         { url: "/IMAGE/Argentina.svg", x: 30, y: 88 },
         // Adicione os outros países conforme necessário
       ];
@@ -55,6 +55,12 @@
               svgWrapper.classList.add("svg-icon");
               svgWrapper.style.left = item.x + "%";
               svgWrapper.style.top = item.y + "%";
+              
+              // Calcular o tamanho do SVG com base na largura da tela
+              var screenWidth = window.innerWidth;
+              var svgWidth = screenWidth * (screenWidth <= 768 ? item.min_width / 100 : item.max_width / 100);
+              svgWrapper.style.width = svgWidth + "px";
+              
               svgWrapper.innerHTML = svgContent;
               container.appendChild(svgWrapper);
             })
