--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -14,7 +14,7 @@
       width: 100%;
       max-width: 1200px; /* Ajuste conforme necessário */
       margin: 0 auto;
-      background-image: url('/IMAGE/Mundi.svg'); /* Substitua pelo caminho da sua imagem de mapa */
+     /* background-image: url('/IMAGE/Mundi.svg'); /* Substitua pelo caminho da sua imagem de mapa */
       background-size: cover;
       height: 100%;
       cursor: crosshair;
