--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -37,12 +37,7 @@
   <script>
     document.addEventListener("DOMContentLoaded", function() {
       var svgData = [
-        { url: "/IMAGE/Alaska.svg", x: 6.5, y: 11 },
-        { url: "/IMAGE/Alemanha.svg", x: 45, y: 34 },
-        // Adicione os países com as coordenadas correspondentes
-        { url: "/IMAGE/Brasil.svg", x: 30, y: 88 },
-        { url: "/IMAGE/Argentina.svg", x: 30, y: 88 },
-        // Adicione os outros países conforme necessário
+        { url: "/IMAGE/Alaska.svg", x: 6.5, y: 11 }
       ];
 
       // Função para carregar e adicionar SVGs ao DOM
@@ -55,7 +50,12 @@
               svgWrapper.classList.add("svg-icon");
               svgWrapper.style.left = item.x + "%";
               svgWrapper.style.top = item.y + "%";
-              svgWrapper.style.width = "5%"; // Defina o tamanho inicial do SVG em relação ao contêiner do mapa
+              
+              // Calcular o tamanho do SVG com base na largura do contêiner do mapa
+              var containerWidth = container.offsetWidth;
+              var svgWidth = containerWidth * 0.2; // Defina o fator de escala conforme necessário
+              svgWrapper.style.width = svgWidth + "px";
+              
               svgWrapper.innerHTML = svgContent;
               container.appendChild(svgWrapper);
             })
