--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -37,7 +37,8 @@
   <script>
     document.addEventListener("DOMContentLoaded", function() {
       var svgData = [
-        { url: "/IMAGE/Alaska.svg", x: 6.5, y: 11 }
+        { url: "/IMAGE/Alaska.svg", x: 6.5, y: 11 },
+        { url: "/IMAGE/Mackenzie.svg", x: 18, y: 14 }
       ];
 
       // Função para carregar e adicionar SVGs ao DOM
