--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -16,7 +16,7 @@
       margin: 0 auto;
       background-image: url('/mnt/data/mmmy3zyj9m691.png'); /* Substitua pelo caminho da sua imagem de mapa */
       background-size: cover;
-      height: 100%;
+      height: 500px; /* Altura fixa para o contêiner do mapa */
       cursor: crosshair;
     }
     .svg-icon {
