--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -12,7 +12,11 @@
     #alaska-container {
       position: absolute;
       top: 2%;
-      left: 2%;
+      right: 2%;
+      transition: transform 0.3s ease; /* Adicionando uma transição suave */
+    }
+    #alaska-container:hover img {
+      transform: scale(1.5); /* Aumenta o tamanho em 50% ao passar o mouse */
     }
   </style>
 </head>
