--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -17,22 +17,21 @@
       height: auto; /* Altura automática para manter a proporção */
       transition: transform 0.3s ease; /* Adicionando uma transição suave */
     }
-    #alaska-container:hover img {
+    #alaska-container:hover {
       transform: scale(1.5); /* Aumenta o tamanho em 50% ao passar o mouse */
     }
   </style>
 </head>
 <body>
   <div id="alaska-container">
-    <img id="alaska-img" src="/IMAGE/Alaska.svg" alt="Alasca">
+    <img src="/IMAGE/Alaska.svg" alt="Alasca">
   </div>
 
   <script>
     window.addEventListener('resize', function() {
       var alaskaContainer = document.getElementById('alaska-container');
-      var alaskaImg = document.getElementById('alaska-img');
       
-      // Atualizar o tamanho do contêiner e da imagem com base nas dimensões da janela do navegador
+      // Atualizar o tamanho do contêiner com base nas dimensões da janela do navegador
       alaskaContainer.style.top = (2 * window.innerHeight / 100) + 'px';
       alaskaContainer.style.right = (2 * window.innerWidth / 100) + 'px';
       alaskaContainer.style.width = (30 * window.innerWidth / 100) + 'px';
