--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -32,10 +32,10 @@
   </style>
 </head>
 <body>
-  <div id="alaska-container" class="image-container" draggable="true" ondrag="drag(event)">
+  <div id="alaska-container" class="image-container" draggable="true" ondragstart="drag(event)">
     <img src="/IMAGE/Alaska.svg" alt="Alasca">
   </div>
-  <div id="mackenzie-container" class="image-container" draggable="true" ondrag="drag(event)">
+  <div id="mackenzie-container" class="image-container" draggable="true" ondragstart="drag(event)">
     <img src="/IMAGE/Mackenzie.svg" alt="Mackenzie">
   </div>
 
